# bevy_auto_scaling

./: Cargo.toml  README.md
examples/: camera2d.rs  camera3d.rs  scaling_ui.rs
src/: lib.rs
