[package]
name = "bevy_auto_scaling"
version = "0.1.3"
edition = "2024"
description = "Auto scale cameras to fit the window."
license = "MIT"
repository = "https://github.com/RuelYasa/bevy_auto_scaling"
readme = "README.md"

include = [
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "src/**",
]


[dependencies.bevy]
version = "0.16.1"
default-features = false
# default features minus "bevy_audio" and "vorbis"
features = [
    "android-game-activity",
    "animation",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_sprite_picking_backend",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "default_font",
    "hdr",
    "multi_threaded",
    "png",
    "smaa_luts",
    "sysinfo_plugin",
    "tonemapping_luts",
    "webgl2",
    "x11",
]
